# mge

./: .gitignore  LICENSE  README.md  compose.yml  init.sql  nginx.conf
back/: .dockerignore  Dockerfile  pyproject.toml
back/scripts/: devseeds.py
back/src/back/: __init__.py  __main__.py  db.py  dependencies.py  hash_tools.py  mail.py  models.py  settings.py
back/src/back/db/: __init__.py  helpers.py  schema.py
back/src/back/endpoints/: admin.py  auth.py  review_sessions.py  user.py
back/tests/: __init__.py  conftest.py  test_auth.py  test_current_user.py  test_schema.py  utils.py
back/tests/db/: conftest.py  test_db.py  test_schema.py
back/tests/endpoints/: conftest.py  test_admin.py  test_auth.py
front/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: App.vue  admin.ts  auth.ts  env.d.ts
front/src/components/: AppShell.vue  PasswordToggle.vue
front/src/router/: index.ts
front/src/views/: AssistantsView.vue  AuthView.vue  ClassesView.vue  DashboardView.vue  HomeView.vue  ProfessorsView.vue
