[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
authors = [
    { name = "Gabriel Kollet", email = "gabrielkollet99@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httptools>=0.7.1",
    "itsdangerous>=2.2.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "uvloop>=0.22.1",
]

[project.scripts]
back = "back:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
